# LearnGate-C

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  build_plan.md  docker-compose.yml  implementation_spec.md  master_spec.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.claude/commands/: commit.md  gen-step-spec.md
.github/workflows/: ci.yml
apps/api/: alembic.ini  mypy.ini  pyproject.toml  ruff.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_users.py  0002_concept_graph.py  0003_archetypes.py  0004_questions.py  0005_mastery.py  0006_sessions.py  0007_plans.py  0008_mocks.py  0009_review.py  0010_events.py  0011_llm_calls.py  0012_tutor_turns.py
apps/api/src/learngate/: config.py  db.py  main.py
apps/api/tests/: conftest.py
apps/api/tests/integration/: test_migrations.py
apps/api/tests/unit/: test_schema_pydantic.py
apps/web/: package.json
apps/web/__tests__/: home.test.tsx
apps/web/app/: page.tsx
specs/: 0-1_dev_infrastructure_monorepo_spec.md  0-2_database_schema_rls_spec.md
